<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightBlue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AppTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/app_title" />

        <TextView
            android:id="@+id/AppAuthor"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/app_author" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/WashingMachineImg"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/pralka" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/WashingMachine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/washing_machine" />

                        <EditText
                            android:id="@+id/WashNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:background="@color/SkyBlue"
                            android:textColor="@color/Navy"
                            android:textColorHint="@color/Navy"
                            android:textSize="20sp"
                            android:hint="@string/enter_wash_number" />

                        <Button
                            android:id="@+id/WashConfirmBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/RoyalBlue"
                            android:layout_margin="10dp"
                            android:textSize="20sp"
                            android:text="@string/confirm"
                            android:onClick="WashingMachine" />

                        <TextView
                            android:id="@+id/WashNumberOut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/wash_number_out" />

                    </LinearLayout>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/VacuumCleanerImg"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/odkurzacz" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/VacuumCleaner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/vacuum_cleaner" />

                        <Button
                            android:id="@+id/VacuumStateBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/RoyalBlue"
                            android:layout_margin="10dp"
                            android:textSize="20sp"
                            android:text="@string/turn_on"
                            android:onClick="VacuumCleaner"/>

                        <TextView
                            android:id="@+id/VacuumState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vacuum_off"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/VacuumBatteryState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/vacuum_status" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>